--- a/font-awesome.css
+++ b/font-awesome.css
@@ -2017,4 +2017,7 @@
 .fa-fonticons:before {
   content: "\f280"; }
 
+.fa-researchgate:before {
+  content: "\f4f8"; }
+
 /*# sourceMappingURL=font-awesome.css.map */
