--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,8 @@
 <script type="text/javascript" src="{{ '/assets/js/jquery.js' | relative_url }}"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 
+<script src="https://kit.fontawesome.com/dcfcf066dd.js" crossorigin="anonymous"></script>
+
 {% for math in page.usemath %}
   {% if math == "latex" %}
     <!-- latex math support -->
