--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
           <div id="social" class="col-lg-5 col-md-5 col-sm-12">
             <h3>SOCIAL</h3>
             <ul>
+              <!--
               {% for social in my.social %}
                 <li>
                   <i class="{{ social.icon-class }}" title="{{ social.name }}"></i>
@@ -15,6 +16,9 @@
                   {% endif %}
                 </li>
               {% endfor %}
+              -->
+              <li> <a style="font-size:15px; line-height:10px;" href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </li><br>
+              <li> <a style="font-size:15px; line-height:10px;" href="https://github.com/fatihidiz"><i class="fa-brands fa-square-github"></i> GitHub</a> </li>
             </ul>
           </div>
 
