--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
               {% endfor %}
               -->
               <li> <a style="font-size:15px; line-height:5px;" href="https://www.researchgate.net/profile/Fatih_Idiz"><i style="color:white;" class="fa-brands fa-researchgate"></i> ResearchGate</a> </li><br>
-              <li> <a style="font-size:15px; line-height:5px;" href="https://github.com/fatihidiz"><i style="color:white;" class="fa-brands fa-square-github"></i> GitHub</a> </li>
+              <li> <a style="font-size:15px;" href="https://github.com/fatihidiz"><i style="color:white;" class="fa-brands fa-square-github"></i> GitHub</a> </li>
             </ul>
           </div>
 
