--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                 </li>
               {% endfor %}
               -->
-              <li> <a style="font-size:15px; line-height:-3px;" href="https://www.researchgate.net/profile/Fatih_Idiz"><i style="color:white;" class="fa-brands fa-researchgate"></i> ResearchGate</a> </li><br>
+              <li> <a style="font-size:15px; line-height:-3px;" href="https://www.researchgate.net/profile/Fatih_Idiz"><i style="color:white;" class="fa-brands fa-researchgate"></i> ResearchGate</a> </li>
               <li> <a style="font-size:15px; line-height:-3px;" href="https://github.com/fatihidiz"><i style="color:white;" class="fa-brands fa-square-github"></i> GitHub</a> </li>
             </ul>
           </div>
