--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
                             <li><a href="{{ '/tag' | relative_url }}">TAG</a></li>
                         </ul>
                     </li>
-                    <li class="col-lg-3"><a href="{{ '/series' | relative_url }}">SERIES</a></li>
+                    <li class="col-lg-3"><a href="{{ '/series' | relative_url }}">PUBLICATIONS</a></li>
                     <li class="col-lg-3"><a href="{{ '/about' | relative_url }}">ABOUT</a></li>
                 </ul>
             </nav>
