--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                     <li class="col-lg-3"><a href="{{ '/' | relative_url }}">HOME</a></li>
                     <li class="col-lg-3">
                         <ul class="subnav">
-                            <a href="javascript:void(0)">POST</a>
+                            <a href="javascript:void(0)">BLOG POSTS</a>
                             <li><a href="{{ '/category' | relative_url }}">CATEGORY</a></li>
                             <li><a href="{{ '/tag' | relative_url }}">TAG</a></li>
                         </ul>
