--- a/_layouts/grouped_post.html
+++ b/_layouts/grouped_post.html
@@ -4,8 +4,8 @@ layout: default
 
 {% assign group_name = page.path | split: "/" | first %}
 
-{% if group_name == "series" %}
-  {% include series_list.html groups=site.collections %}
+{% if group_name == "publications" %}
+  {% include publications_list.html groups=site.collections %}
 {% else %}
   {% case group_name %}
     {% when 'category' %}
